Layout 4: All elements are on the screen in correct area but alignment is wrong, screen is responsive though

--- a/Week 1/4 CSS Best Practices/Day 3/Layout 4/Layout 4 (Without Help)/style.css
+++ b/Week 1/4 CSS Best Practices/Day 3/Layout 4/Layout 4 (Without Help)/style.css
@@ -8,12 +8,17 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  flex-wrap: column;
 }
 
 .row {
   width: 100%;
   max-width: 600px;
   margin: 0 auto;
+    display: flex;
+  justify-content: center;
+  flex-wrap: column;
+  align-items: center;
 }
 
 .box-wrapper {
@@ -21,7 +26,6 @@
   flex-wrap: wrap;
   height: 100%;
   width: 45%;
-  margin: 24px;
   justify-content: center;
   align-items: center;
 }
@@ -40,8 +44,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 24px;
-  
+  margin-left: 24px;
 }
 
 .tiny-box {
